Adding a new api to get total order count with value between two timestamp
